--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "license": "ISC",
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
+    "axios": "^0.19.0",
+    "msgpack-lite": "^0.1.26",
     "next": "^9.1.5",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
