--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 8500",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
