--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "next",
-    "build": "next build",
+    "build:test": "cross-env SETTINGENV=test next build",
+    "build:production": "cross-env SETTINGENV=production next build",
     "start": "next start -p 8500",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -33,6 +34,7 @@
     "babel-jest": "^24.9.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "cross-env": "^6.0.3",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "jest": "^24.9.0",
