--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next",
     "build:test": "cross-env SETTINGENV=test next build",
     "build:production": "cross-env SETTINGENV=production next build",
-    "start": "next start -p 8500",
+    "start:test": "cross-env SETTINGENV=test next start -p 8400",
+    "start": "cross-env SETTINGENV=production next start -p 8500",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
