--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "axios": "^0.19.0",
     "msgpack-lite": "^0.1.26",
     "next": "^9.1.5",
+    "next-compose-plugins": "^2.2.0",
+    "next-offline": "^4.0.6",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
