00000 - add next-offline and temporary favicon

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,5 @@
 {
     "shared": "shared1",
-    "secretKey":"123"
+    "secretKey": "123",
+    "soccerAPIBaseUrl": "http://localhost/Soccer.API/api"
 }
