--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next",
+    "dev": "ts-node --project tsconfig.server.json server.ts ",
     "build:test": "cross-env SETTINGENV=test next build",
     "build:production": "cross-env SETTINGENV=production next build",
     "start:test": "cross-env SETTINGENV=test next start -p 8400",
@@ -25,17 +25,22 @@
     "@zeit/next-source-maps": "0.0.4-canary.1",
     "axios": "^0.19.0",
     "lodash": "^4.17.15",
+    "express": "^4.17.1",
     "msgpack-lite": "^0.1.26",
     "next": "^9.1.5",
     "next-compose-plugins": "^2.2.0",
+    "next-i18next": "^2.1.1",
     "next-offline": "^4.0.6",
     "node-sass": "^4.13.0",
+    "nodemon": "^2.0.2",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "ts-node": "^8.5.4"
   },
   "devDependencies": {
     "@types/enzyme": "^3.10.4",
     "@types/enzyme-adapter-react-16": "^1.0.5",
+    "@types/express": "^4.17.2",
     "@types/jest": "^24.0.23",
     "@types/node": "^12.12.17",
     "@types/react": "^16.9.16",
