--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sentry/browser": "^5.10.2",
+    "@sentry/node": "^5.10.2",
+    "@types/lodash": "^4.14.149",
     "@zeit/next-sass": "^1.0.1",
+    "@zeit/next-source-maps": "0.0.4-canary.1",
     "axios": "^0.19.0",
+    "lodash": "^4.17.15",
     "msgpack-lite": "^0.1.26",
     "next": "^9.1.5",
     "next-compose-plugins": "^2.2.0",
