125733 - config multi languages

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node --project tsconfig.server.json server.ts ",
-    "build:test": "cross-env SETTINGENV=test next build",
-    "build:production": "cross-env SETTINGENV=production next build",
-    "start:test": "cross-env SETTINGENV=test next start -p 8400",
-    "start": "cross-env SETTINGENV=production next start -p 8500",
+    "build:test": "cross-env SETTINGENV=test next build && tsc --project tsconfig.server.json ",
+    "build:production": "cross-env SETTINGENV=production next build && tsc --project tsconfig.server.json",
+    "start:test": "cross-env SETTINGENV=test PORT=8400 node server.js",
+    "start": "cross-env SETTINGENV=production PORT=8500 node server.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
