125733 - move server.js to dist

--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -2,16 +2,9 @@
     "extends": "./tsconfig.json",
     "compilerOptions": {
       "module": "commonjs",
-      "outDir": "./",
+      "outDir": "./dist",
       "isolatedModules": false,
-      "noEmit": true
+      "noEmit": false
     },
     "include": ["server.ts"],
-    "exclude": [
-      "node_modules",
-      "**/*.spec.ts",
-      "**/*.spec.tsx",
-      "**/*.test.ts",
-      "**/*.test.tsx"
-    ]
   }
