--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "ts-node --project tsconfig.server.json server.ts ",
     "build:test": "cross-env SETTINGENV=test next build && tsc --project tsconfig.server.json ",
     "build:production": "cross-env SETTINGENV=production next build && tsc --project tsconfig.server.json",
-    "start:test": "cross-env SETTINGENV=test PORT=8400 node server.js",
-    "start": "cross-env SETTINGENV=production PORT=8500 node server.js",
+    "start:test": "cross-env SETTINGENV=test NODE_ENV=production PORT=8400 node dist/server.js",
+    "start": "cross-env SETTINGENV=production NODE_ENV=production PORT=8500 node dist/server.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
