--- a/appsettings.development.json
+++ b/appsettings.development.json
@@ -1,4 +1,5 @@
 {
-    "apiUrl": "DevApi",
-    "soccerAPIBaseUrl": "http://localhost/Soccer.API/api"
+  "apiUrl": "DevApi",
+  "soccerAPIBaseUrl": "http://localhost/Soccer.API/api",
+  "sentryDSN": "https://d3cc964676f047eeb9ada16fcf5f4476@sentry.nexdev.net/90"
 }
