--- a/appsettings.production.json
+++ b/appsettings.production.json
@@ -1,4 +1,5 @@
 {
-    "apiUrl": "ProductionApi",
-    "soccerAPIBaseUrl": "http://localhost/Soccer.API/api"
+  "apiUrl": "ProductionApi",
+  "soccerAPIBaseUrl": "http://localhost/Soccer.API/api",
+  "sentryDSN": "https://83c6b7e30522412a9cdcb5594d650916@sentry.nexdev.net/89"
 }
