--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,6 @@
 {
-    "shared": "shared1",
-    "secretKey": "123",
-    "soccerAPIBaseUrl": "http://localhost/Soccer.API/api"
+  "shared": "shared1",
+  "secretKey": "123",
+  "soccerAPIBaseUrl": "http://localhost/Soccer.API/api",
+  "sentryDSN": "https://d3cc964676f047eeb9ada16fcf5f4476@sentry.nexdev.net/90"
 }
