--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-source-maps": "0.0.4-canary.1",
     "axios": "^0.19.0",
-    "lodash": "^4.17.15",
     "express": "^4.17.1",
+    "lodash": "^4.17.15",
     "msgpack-lite": "^0.1.26",
     "next": "^9.1.5",
     "next-compose-plugins": "^2.2.0",
@@ -34,6 +34,7 @@
     "node-sass": "^4.13.0",
     "nodemon": "^2.0.2",
     "react": "^16.12.0",
+    "react-datepicker": "^2.10.1",
     "react-dom": "^16.12.0",
     "ts-node": "^8.5.4"
   },
@@ -44,6 +45,7 @@
     "@types/jest": "^24.0.23",
     "@types/node": "^12.12.17",
     "@types/react": "^16.9.16",
+    "@types/react-datepicker": "^2.9.5",
     "babel-core": "^6.26.3",
     "babel-jest": "^24.9.0",
     "babel-preset-env": "^1.7.0",
