125680 - add ingored files/folder in vscode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,12 @@
 {
     "files.exclude": {
+        "**/.gitignore": true,
         "**/.next": true,
+        "**/.sonarlint": true,
+        "**/.vs": true,
         "**/.vscode": true,
+        "**/*.ncrunchsolution.user": true,
+        "**/*.sln": true,
         "**/node_modules": true
     },
     "sonarlint.connectedMode.project": {
