125680 - update sonar check unittest and code coverage

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,3 +2,5 @@ sonar.projectKey=score247-web-app
 sonar.projectName=Score247 / Score247 Web App
 sonar.sources=.
 sonar.language=ts
+sonar.typescript.lcov.reportPath=".\ts-lcov\lcov.info"
+sonar.testExecutionReportPaths=".\ts-test-report.xml"
