--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,5 +2,7 @@ sonar.projectKey=score247-web-app
 sonar.projectName=Score247 / Score247 Web App
 sonar.sources=.
 sonar.language=ts
-sonar.typescript.lcov.reportPath=".\ts-lcov\lcov.info"
-sonar.testExecutionReportPaths=".\ts-test-report.xml"
+sonar.tests=.
+sonar.typescript.lcov.reportPath=./ts-lcov/lcov.info
+sonar.testExecutionReportPaths=./ts-test-report.xml
+sonar.test.inclusions=**/*.spec.ts,**/*.spec.tsx
