125680 - update code coverage config

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,6 +3,6 @@ sonar.projectName=Score247 / Score247 Web App
 sonar.sources=.
 sonar.language=ts
 sonar.tests=.
-sonar.typescript.lcov.reportPath=./ts-lcov/lcov.info
+sonar.typescript.lcov.reportPaths=./ts-lcov/lcov.info
 sonar.testExecutionReportPaths=./ts-test-report.xml
 sonar.test.inclusions=**/*.spec.ts,**/*.spec.tsx
