--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-source-maps": "0.0.4-canary.1",
     "axios": "^0.19.0",
+    "date-fns": "^2.8.1",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
     "msgpack-lite": "^0.1.26",
@@ -34,6 +35,7 @@
     "node-sass": "^4.13.0",
     "nodemon": "^2.0.2",
     "react": "^16.12.0",
+    "react-i18next":"^11.2.7",
     "react-datepicker": "^2.10.1",
     "react-dom": "^16.12.0",
     "ts-node": "^8.5.4"
