--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "jest": "^24.9.0",
     "jest-sonar-reporter": "^2.0.0",
     "ts-jest": "^24.2.0",
-    "typescript": "^3.7.3"
+    "typescript": "^3.7.3",
+    "url-loader": "^3.0.0"
   },
   "jest": {
     "testResultsProcessor": "jest-sonar-reporter",
