--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@sentry/browser": "^5.10.2",
     "@sentry/node": "^5.10.2",
     "@types/lodash": "^4.14.149",
+    "@types/react-select": "^3.0.8",
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-source-maps": "0.0.4-canary.1",
     "axios": "^0.19.0",
@@ -38,6 +39,7 @@
     "react-i18next":"^11.2.7",
     "react-datepicker": "^2.10.1",
     "react-dom": "^16.12.0",
+    "react-select": "^3.0.8",
     "ts-node": "^8.5.4"
   },
   "devDependencies": {
