125575 - unit test for date picker

--- a/jest.tsconfig.json
+++ b/jest.tsconfig.json
@@ -5,6 +5,7 @@
       "jsx": "react",
       "sourceMap": false,
       "experimentalDecorators": true,
+      "esModuleInterop": true,
       "noImplicitUseStrict": true,
       "removeComments": true,
       "moduleResolution": "node",
