--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@sentry/node": "^5.10.2",
     "@types/lodash": "^4.14.149",
     "@types/react-select": "^3.0.8",
+    "@types/msgpack-lite": "^0.1.7",
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-source-maps": "0.0.4-canary.1",
     "axios": "^0.19.0",
@@ -36,10 +37,10 @@
     "node-sass": "^4.13.0",
     "nodemon": "^2.0.2",
     "react": "^16.12.0",
-    "react-i18next":"^11.2.7",
     "react-datepicker": "^2.10.1",
     "react-dom": "^16.12.0",
     "react-select": "^3.0.8",
+    "react-i18next": "^11.2.7",
     "ts-node": "^8.5.4"
   },
   "devDependencies": {
