--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,15 @@
 {
-  "name": "next-offline",
-  "short_name": "next-offline",
-  "description": "Nextjs using service worker via next-offline",
-  "icons": [
-    {
-      "src": "/static/pwa.png",
+  "name": "Score247",
+  "short_name": "Score247",
+  "description": "Score247",
+  "icons": [{
+      "src": "/static/images/icon192x192.png",
       "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/static/images/icon512x512.png",
+      "sizes": "512x512",
       "type": "image/png"
     }
   ],
