--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,8 +13,8 @@
       "type": "image/png"
     }
   ],
-  "theme_color": "#ffffff",
-  "background_color": "#ffffff",
+  "theme_color": "#F8F9FC",
+  "background_color": "#F8F9FC",
   "start_url": "/",
   "display": "standalone"
 }
