--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "next-offline": "^4.0.6",
     "node-sass": "^4.13.0",
     "nodemon": "^2.0.2",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-datepicker": "^2.10.1",
     "react-dom": "^16.12.0",
