--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,8 +3,28 @@
   "short_name": "Score247",
   "description": "Score247",
   "icons": [{
+      "src": "/static/images/icon120x120.png",
+      "sizes": "120x120",
+      "type": "image/png"
+    },
+    {
+      "src": "/static/images/icon152x152.png",
+      "sizes": "152x152",
+      "type": "image/png"
+    },
+    {
+      "src": "/static/images/icon144x144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
       "src": "/static/images/icon192x192.png",
       "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/static/images/icon384x384.png",
+      "sizes": "384x384",
       "type": "image/png"
     },
     {
