125965 - Add Constant class

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,4 +13,5 @@
         "serverId": "nexdevsonarqube",
         "projectKey": "score247-web-app"
     },
+    "sonarlint.trace.server": "messages",
 }
