--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "test:coverage": "jest --coverage",
     "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand",
     "export": "next export",
-    "lighthouse:html": "node node_modules/lighthouse/lighthouse-cli/index.js --output-path=./audit/lighthouse-report.html --quiet --chrome-flags='--headless' https://score247-web.nexdev.net/",
-    "lighthouse:json": "mkdir audit && node node_modules/lighthouse/lighthouse-cli/index.js --output json --output-path=./audit/lighthouse-report.json --quiet --chrome-flags='--headless' https://score247-web.nexdev.net/",
-    "lighthouse:report": ""
+    "lighthouse:html": "node node_modules/lighthouse/lighthouse-cli/index.js --output-path=./lighthouse-report.html --quiet --chrome-flags='--headless' https://score247-web.nexdev.net/",
+    "lighthouse:json": "node node_modules/lighthouse/lighthouse-cli/index.js --output json --output-path=./lighthouse-report.json --quiet --chrome-flags='--headless' https://score247-web.nexdev.net/",
+    "lighthouse:report": "node ./audit.js"
   },
   "keywords": [],
   "author": "",
