00000 - change msgpack package

--- a/appsettings.development.json
+++ b/appsettings.development.json
@@ -1,5 +1,5 @@
 {
   "apiUrl": "DevApi",
-  "soccerAPIBaseUrl": "http://localhost/Soccer.API/api",
+  "soccerAPIBaseUrl": "https://score247-api3.nexdev.net/test/api",
   "sentryDSN": "https://d3cc964676f047eeb9ada16fcf5f4476@sentry.nexdev.net/90"
 }
