--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
   "license": "ISC",
   "dependencies": {
     "@microsoft/signalr": "^3.1.0",
+    "@msgpack/msgpack": "^1.10.0",
     "@sentry/browser": "^5.10.2",
     "@sentry/node": "^5.10.2",
     "@types/lodash": "^4.14.149",
-    "@types/msgpack-lite": "^0.1.7",
     "@types/react-select": "^3.0.8",
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-source-maps": "0.0.4-canary.1",
@@ -34,7 +34,6 @@
     "date-fns": "^2.8.1",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
-    "msgpack-lite": "^0.1.26",
     "next": "^9.1.5",
     "next-compose-plugins": "^2.2.0",
     "next-i18next": "^2.1.1",
