00000 - re-arrange Layout component

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "shared": "shared1",
   "secretKey": "123",
-  "soccerAPIBaseUrl": "https://score247-api3.nexdev.net/test/api",
+  "soccerAPIBaseUrl": "http://localhost:57392/api",
   "sentryDSN": "https://d3cc964676f047eeb9ada16fcf5f4476@sentry.nexdev.net/90"
 }
