--- a/appsettings.json
+++ b/appsettings.json
@@ -3,5 +3,6 @@
   "secretKey": "123",
   "soccerAPIBaseUrl": "https://score247-api3.nexdev.net/test/api",
   "sentryDSN": "https://d3cc964676f047eeb9ada16fcf5f4476@sentry.nexdev.net/90",
-  "soccerPublisherUrl": "https://score247-api4.nexdev.net/test"
+  "soccerPublisherUrl": "https://score247-api4.nexdev.net/test",
+  "numberOfRowEveryAd": 5
 }
