--- a/appsettings.production.json
+++ b/appsettings.production.json
@@ -1,6 +1,6 @@
 {
   "apiUrl": "ProductionApi",
-  "soccerAPIBaseUrl": "https://score247-api3.nexdev.net/test/api",
+  "soccerAPIBaseUrl": "https://score247-api1.nexdev.net/dev/api",
   "sentryDSN": "https://83c6b7e30522412a9cdcb5594d650916@sentry.nexdev.net/89",
-  "soccerPublisherUrl": "https://score247-api4.nexdev.net/test"
+  "soccerPublisherUrl": "https://score247-api2.nexdev.net/dev"
 }
