--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "soccerAPIBaseUrl": "https://score247-api1.nexdev.net/dev/api",
+  "soccerAPIBaseUrl": "https://score247-api1.nexdev.net/dev/api/soccer",
   "sentryDSN": "https://d3cc964676f047eeb9ada16fcf5f4476@sentry.nexdev.net/90",
   "soccerPublisherUrl": "https://score247-api2.nexdev.net/dev",
   "numberOfRowEveryAd": 5
