--- a/appsettings.development.json
+++ b/appsettings.development.json
@@ -1,6 +1,6 @@
 {
   "apiUrl": "DevApi",
-  "soccerAPIBaseUrl": "http://localhost:57392/api/soccer",
+  "soccerAPIBaseUrl": "https://score247-api1.nexdev.net/dev/api",
   "sentryDSN": "https://d3cc964676f047eeb9ada16fcf5f4476@sentry.nexdev.net/90",
   "soccerPublisherUrl": "https://score247-api2.nexdev.net/dev"
 }
