--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "ts-node": "^8.5.4"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-optional-chaining": "^7.8.3",
     "@types/enzyme": "^3.10.4",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/express": "^4.17.2",
