--- a/jest.tsconfig.json
+++ b/jest.tsconfig.json
@@ -9,6 +9,7 @@
       "noImplicitUseStrict": true,
       "removeComments": true,
       "moduleResolution": "node",
+      "resolveJsonModule": true,
       "lib": [
         "es2017",
         "dom"
