--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-dom": "^16.12.0",
     "react-i18next": "^11.2.7",
     "react-select": "^3.0.8",
+    "react-tabs": "^3.1.0",
     "ts-node": "^8.5.4"
   },
   "devDependencies": {
@@ -60,6 +61,7 @@
     "@types/node": "^12.12.17",
     "@types/react": "^16.9.16",
     "@types/react-datepicker": "^2.9.5",
+    "@types/react-tabs": "^2.3.1",
     "babel-core": "^6.26.3",
     "babel-jest": "^24.9.0",
     "babel-preset-env": "^1.7.0",
