00000 - temporary develop for request data with Bearer token

--- a/appsettings.development.json
+++ b/appsettings.development.json
@@ -1,6 +1,6 @@
 {
   "apiUrl": "DevApi",
-  "soccerAPIBaseUrl": "https://score247-api1.nexdev.net/dev/api/soccer",
+  "soccerAPIBaseUrl": "https://api.score247.net/api/soccer",
   "sentryDSN": "https://d3cc964676f047eeb9ada16fcf5f4476@sentry.nexdev.net/90",
   "soccerPublisherUrl": "https://score247-api2.nexdev.net/dev"
 }
