--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "@msgpack/msgpack": "^1.10.0",
     "@sentry/browser": "^5.10.2",
     "@sentry/node": "^5.10.2",
+    "@types/crypto-js": "^3.1.43",
     "@types/lodash": "^4.14.149",
     "@types/lscache": "^1.3.0",
     "@types/react-select": "^3.0.8",
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-source-maps": "0.0.4-canary.1",
     "axios": "^0.19.0",
+    "crypto-js": "^3.1.9-1",
     "date-fns": "^2.9.0",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
