--- a/appsettings.development.json
+++ b/appsettings.development.json
@@ -2,5 +2,8 @@
   "apiUrl": "DevApi",
   "soccerAPIBaseUrl": "https://api.score247.net/api/soccer",
   "sentryDSN": "https://d3cc964676f047eeb9ada16fcf5f4476@sentry.nexdev.net/90",
-  "soccerPublisherUrl": "https://score247-api2.nexdev.net/dev"
+  "soccerPublisherUrl": "https://score247-api2.nexdev.net/dev",
+  "authenticateUrl": "https://api.score247.net/api/authenticate/generateToken",
+  "encryptKey": "e6e42fa2cd8db55e10c2b7b4833e0f8e",
+  "salt": "382af5535cba45839752a452c16bc618"
 }
