--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@sentry/browser": "^5.10.2",
     "@sentry/node": "^5.10.2",
     "@types/crypto-js": "^3.1.43",
+    "@types/js-cookie": "^2.2.4",
     "@types/lodash": "^4.14.149",
     "@types/lscache": "^1.3.0",
     "@types/react-select": "^3.0.8",
@@ -37,10 +38,12 @@
     "crypto-js": "^3.1.9-1",
     "date-fns": "^2.9.0",
     "express": "^4.17.1",
+    "js-cookie": "^2.2.1",
     "lodash": "^4.17.15",
     "lscache": "^1.3.0",
     "next": "^9.1.5",
     "next-compose-plugins": "^2.2.0",
+    "next-cookies": "^2.0.3",
     "next-i18next": "^2.1.1",
     "next-offline": "^4.0.6",
     "node-sass": "^4.13.0",
