127968 - re-arrange configuration files

--- a/_configs/appsettings.autotest.json
+++ b/_configs/appsettings.autotest.json
@@ -1,7 +1,7 @@
 {
-  "apiUrl": "ProductionApi",
   "soccerAPIBaseUrl": "https://score247-api1.nexdev.net/dev/api/soccer",
   "sentryDSN": "https://83c6b7e30522412a9cdcb5594d650916@sentry.nexdev.net/89",
+  "numberOfRowEveryAd": 5,
   "soccerPublisherUrl": "https://score247-api2.nexdev.net/dev",
   "authenticateUrl": "https://api.score247.net/api/authenticate/generateToken",
   "encryptKey": "350cd642f6764a154a9e4f03eb3121b6",
