--- a/_configs/appsettings.main.json
+++ b/_configs/appsettings.main.json
@@ -1,9 +1,9 @@
 {
-  "soccerAPIBaseUrl": "https://score247-api1.nexdev.net/dev/api/soccer",
+  "soccerAPIBaseUrl": "https://api.score247.net/api/soccer",
   "sentryDSN": "https://83c6b7e30522412a9cdcb5594d650916@sentry.nexdev.net/89",
-  "soccerPublisherUrl": "https://score247-api2.nexdev.net/dev",
+  "soccerPublisherUrl": "https://publisher.score247.net",
   "numberOfRowEveryAd": 5,
   "authenticateUrl": "https://api.score247.net/api/authenticate/generateToken",
-  "encryptKey": "350cd642f6764a154a9e4f03eb3121b6",
+  "encryptKey": "e6e42fa2cd8db55e10c2b7b4833e0f8e",
   "salt": "382af5535cba45839752a452c16bc618"
 }
