127968 - bring widget key to config

--- a/_configs/appsettings.autotest.json
+++ b/_configs/appsettings.autotest.json
@@ -5,5 +5,6 @@
   "soccerPublisherUrl": "https://score247-api2.nexdev.net/dev",
   "authenticateUrl": "https://api.score247.net/api/authenticate/generateToken",
   "encryptKey": "350cd642f6764a154a9e4f03eb3121b6",
-  "salt": "382af5535cba45839752a452c16bc618"
+  "salt": "382af5535cba45839752a452c16bc618",
+  "sportRadarWidgetKey": "sportradar"
 }
