--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/js-cookie": "^2.2.4",
     "@types/lodash": "^4.14.149",
     "@types/lscache": "^1.3.0",
+    "@types/react-modal": "^3.10.4",
     "@types/react-select": "^3.0.8",
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-source-maps": "0.0.4-canary.1",
@@ -54,6 +55,7 @@
     "react-datepicker": "^2.10.1",
     "react-dom": "^16.12.0",
     "react-i18next": "^11.2.7",
+    "react-modal": "^3.11.1",
     "react-select": "^3.0.8",
     "react-swipeable-views": "^0.13.3",
     "react-swipeable-views-core": "^0.13.1",
