--- a/package.json
+++ b/package.json
@@ -64,8 +64,8 @@
     "ts-node": "^8.5.4"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-optional-chaining": "^7.8.3",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
+    "@babel/plugin-proposal-optional-chaining": "^7.8.3",
     "@types/enzyme": "^3.10.4",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/express": "^4.17.2",
@@ -82,6 +82,7 @@
     "cross-env": "^6.0.3",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
+    "enzyme-to-json": "^3.4.4",
     "jest": "^24.9.0",
     "jest-sonar-reporter": "^2.0.0",
     "lighthouse": "^5.6.0",
