127968 - update ball tracker key

--- a/_configs/appsettings.autotest.json
+++ b/_configs/appsettings.autotest.json
@@ -6,6 +6,6 @@
   "authenticateUrl": "https://api.score247.net/api/authenticate/generateToken",
   "encryptKey": "350cd642f6764a154a9e4f03eb3121b6",
   "salt": "382af5535cba45839752a452c16bc618",
-  "sportRadarWidgetKey": "sportradar",
+  "sportRadarWidgetKey": "549fbd108dfa14a21c701dc45cd9b73a",
   "assetsUrl": "https://assets-dev.nexdev.net"
 }
