--- a/_configs/appsettings.json
+++ b/_configs/appsettings.json
@@ -6,6 +6,6 @@
   "authenticateUrl": "https://api.score247.net/api/authenticate/generateToken",
   "encryptKey": "e6e42fa2cd8db55e10c2b7b4833e0f8e",
   "salt": "382af5535cba45839752a452c16bc618",
-  "sportRadarWidgetKey": "sportradar",
+  "sportRadarWidgetKey": "549fbd108dfa14a21c701dc45cd9b73a",
   "assetsUrl": "https://assets.score247.net"
 }
